Signup, Login page created

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://imgs.search.brave.com/Zn6Peaj4GljFpfbU0qLW87Maaz_jZ9mJ0lTuwoBPLRw/rs:fit:1200:720:1/g:ce/aHR0cHM6Ly9pLnl0/aW1nLmNvbS92aS9s/Y0Y5MW9xNWNUZy9t/YXhyZXNkZWZhdWx0/LmpwZw" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>OLX</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
