Changed loading, added new loading for Create products, solved if no Favorite display no favorite., changed browser tab colour to theme colour & removed some unusefull css files

--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,16 @@
     <meta charset="utf-8" />
     <link rel="icon" href="https://imgs.search.brave.com/Zn6Peaj4GljFpfbU0qLW87Maaz_jZ9mJ0lTuwoBPLRw/rs:fit:1200:720:1/g:ce/aHR0cHM6Ly9pLnl0/aW1nLmNvbS92aS9s/Y0Y5MW9xNWNUZy9t/YXhyZXNkZWZhdWx0/LmpwZw" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#002f34" />
     <meta
       name="description"
-      content="olx clone, olx.in, olx-clone-using react-js"
+      content="olx clone, olx.in, olx-clone-using-react-js olx-clone-reactt.web.app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>OLX</title>
   </head>
   <body>
-    <noscript</noscript>
-    <div id="root">
-
-    </div>
+    <div id="root"></div>
   </body>
 </html>
