favico icon added ,Changed loc to India (header), changed dummy product image linkn, added user can view their related posts on viewProduct && set border

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://imgs.search.brave.com/Zn6Peaj4GljFpfbU0qLW87Maaz_jZ9mJ0lTuwoBPLRw/rs:fit:1200:720:1/g:ce/aHR0cHM6Ly9pLnl0/aW1nLmNvbS92aS9s/Y0Y5MW9xNWNUZy9t/YXhyZXNkZWZhdWx0/LmpwZw" />
+    <link rel="icon" href="/src/Assets/Media/favico.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#002f34" />
     <meta
